--- a/public/index.html
+++ b/public/index.html
@@ -24,10 +24,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"/>
     <script src="https://kit.fontawesome.com/771bef3036.js" crossorigin="anonymous"></script>
 
-    <title>Vision Care</title>
+    <title>TALENT VISION CARE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
