improve seo build 2

--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="Talent Vision Care" content="Ophthalmic Medical Devices and Consumables"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"/><script src="https://kit.fontawesome.com/771bef3036.js" crossorigin="anonymous"></script><title>TALENT VISION CARE</title><script defer="defer" src="/static/js/main.56c58df6.js"></script><link href="/static/css/main.e4b52129.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"><div style="visibility:hidden"><h1>TALENT VISION CARE</h1><p>We are Saudi Healthcare Company, specializing in Ophthalmic Medical Devices and Consumables, as well as cosmeceuticals and nutraceutical products. With locations in Riyadh, Dammam, and Jeddah, we have established ourselves as a reputable company covering all territories in the Kingdom of Saudi Arabia. Our goal is to expand our reach and cover the MENA region (Middle East and North Africa) by the end of 2028. Our team consists of experienced professionals with over 50 years of cumulative experience in the pharmaceutical industry and medical devices. We value our team members as the most valuable resources in our organization. We carefully select our products and services, taking our sense of responsibility towards the community and customers into consideration. Providing high-quality products at affordable and competitive prices to support the health improvement process in our region is our priority. We believe that our role is not just about promoting and selling products, but rather providing value to our customers. Our strategic focus lies in building long-term relationships with our customers, as this will have a positive impact on patient health. At Talent Vision Care Co., we are committed to satisfying our customers' needs and providing them with the service they deserve. We strive to go above and beyond to exceed their expectations.</p><p>Based on our social responsibilities towards Health care in Gulf region , We are Saudi Health care Company ,committed to supply and promote high standard quality of consumables , Medical devices specialized in Ophthalmology sector, besides, Human Natural products with high safety profile and competitive prices to improve the quality of life for our patients.</p><p>To be one of the top ten leading companies in Medical devices sector within seven years plan.</p></div></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="Talent Vision Care"
+      content="Ophthalmic Medical Devices and Consumables"
+    />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/771bef3036.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>TALENT VISION CARE</title>
+    <script defer="defer" src="/static/js/main.56c58df6.js"></script>
+    <link href="/static/css/main.e4b52129.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div id="root">
+      <div style="visibility: hidden">
+        <h1>TALENT VISION CARE</h1>
+        <p>
+          We are Saudi Healthcare Company, specializing in Ophthalmic Medical
+          Devices and Consumables, as well as cosmeceuticals and nutraceutical
+          products. With locations in Riyadh, Dammam, and Jeddah, we have
+          established ourselves as a reputable company covering all territories
+          in the Kingdom of Saudi Arabia. Our goal is to expand our reach and
+          cover the MENA region (Middle East and North Africa) by the end of
+          2028. Our team consists of experienced professionals with over 50
+          years of cumulative experience in the pharmaceutical industry and
+          medical devices. We value our team members as the most valuable
+          resources in our organization. We carefully select our products and
+          services, taking our sense of responsibility towards the community and
+          customers into consideration. Providing high-quality products at
+          affordable and competitive prices to support the health improvement
+          process in our region is our priority. We believe that our role is not
+          just about promoting and selling products, but rather providing value
+          to our customers. Our strategic focus lies in building long-term
+          relationships with our customers, as this will have a positive impact
+          on patient health. At Talent Vision Care Co., we are committed to
+          satisfying our customers' needs and providing them with the service
+          they deserve. We strive to go above and beyond to exceed their
+          expectations.
+        </p>
+        <p>
+          Based on our social responsibilities towards Health care in Gulf
+          region , We are Saudi Health care Company ,committed to supply and
+          promote high standard quality of consumables , Medical devices
+          specialized in Ophthalmology sector, besides, Human Natural products
+          with high safety profile and competitive prices to improve the quality
+          of life for our patients.
+        </p>
+        <p>
+          To be one of the top ten leading companies in Medical devices sector
+          within seven years plan.
+        </p>
+      </div>
+    </div>
+  </body>
+</html>
