add meta description

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="Talent Vision Care"
-      content="Ophthalmic Medical Devices and Consumables"
-    />
+    <meta name="description" content="Talent Vision Care. We are a Saudi Healthcare Company specializing in Ophthalmic Medical Devices and Consumables, as well as cosmeceuticals and nutraceutical products.">
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
