update index.html with browser file

--- a/index.html
+++ b/index.html
@@ -1,1 +1,210 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Talent Vision Care. We are a Saudi Healthcare Company specializing in Ophthalmic Medical Devices and Consumables, as well as cosmeceuticals and nutraceutical products."><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"/><script src="https://kit.fontawesome.com/771bef3036.js" crossorigin="anonymous"></script><title>TALENT VISION CARE</title><script defer="defer" src="/static/js/main.5f4e3e24.js"></script><link href="/static/css/main.e4b52129.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"><div style="visibility:hidden"><h1>TALENT VISION CARE</h1><p>We are Saudi Healthcare Company, specializing in Ophthalmic Medical Devices and Consumables, as well as cosmeceuticals and nutraceutical products. With locations in Riyadh, Dammam, and Jeddah, we have established ourselves as a reputable company covering all territories in the Kingdom of Saudi Arabia. Our goal is to expand our reach and cover the MENA region (Middle East and North Africa) by the end of 2028. Our team consists of experienced professionals with over 50 years of cumulative experience in the pharmaceutical industry and medical devices. We value our team members as the most valuable resources in our organization. We carefully select our products and services, taking our sense of responsibility towards the community and customers into consideration. Providing high-quality products at affordable and competitive prices to support the health improvement process in our region is our priority. We believe that our role is not just about promoting and selling products, but rather providing value to our customers. Our strategic focus lies in building long-term relationships with our customers, as this will have a positive impact on patient health. At Talent Vision Care Co., we are committed to satisfying our customers' needs and providing them with the service they deserve. We strive to go above and beyond to exceed their expectations.</p><p>Based on our social responsibilities towards Health care in Gulf region , We are Saudi Health care Company ,committed to supply and promote high standard quality of consumables , Medical devices specialized in Ophthalmology sector, besides, Human Natural products with high safety profile and competitive prices to improve the quality of life for our patients.</p><p>To be one of the top ten leading companies in Medical devices sector within seven years plan.</p></div></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="Talent Vision Care. We are a Saudi Healthcare Company specializing in Ophthalmic Medical Devices and Consumables, as well as cosmeceuticals and nutraceutical products."
+    />
+    <link rel="apple-touch-icon" href="/logo192.png" />
+    <link rel="manifest" href="/manifest.json" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
+    />
+    <script
+      src="https://kit.fontawesome.com/771bef3036.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>TALENT VISION CARE</title>
+    <script defer="defer" src="/static/js/main.5f4e3e24.js"></script>
+    <link href="/static/css/main.e4b52129.css" rel="stylesheet" />
+  </head>
+  <body cz-shortcut-listen="true">
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root">
+      <div class="App">
+        <header>
+          <nav class="navbar navbar-expand-lg fixed-top">
+            <div class="container-fluid">
+              <a href="/" class="navbar-brand"
+                ><img
+                  class="logo"
+                  src="/static/media/vision_care.166f44f5005683c04815.png"
+                  alt="TALENT VISION CARE" /></a
+              ><button
+                aria-label="Toggle navigation"
+                type="button"
+                class="navbar-toggler"
+              >
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse">
+                <ul class="m-auto navbar-nav">
+                  <li class="nav-item">
+                    <a href="/#/home" class="nav-link">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="/#/about" class="nav-link">About</a>
+                  </li>
+                  <li class="dropdown nav-item">
+                    <a
+                      aria-haspopup="true"
+                      href="#"
+                      class="dropdown-toggle nav-link"
+                      aria-expanded="false"
+                      >Work Scope</a
+                    >
+                    <div
+                      tabindex="-1"
+                      role="menu"
+                      aria-hidden="true"
+                      class="dropdown-menu dropdown-menu-end"
+                    >
+                      <button
+                        tabindex="0"
+                        role="menuitem"
+                        class="dropdown-item"
+                      >
+                        <a href="/#/consumables" class="nav-link"
+                          >Consumables</a
+                        ></button
+                      ><button
+                        tabindex="0"
+                        role="menuitem"
+                        class="dropdown-item"
+                      >
+                        <a href="/#/devices" class="nav-link">Devices</a>
+                      </button>
+                    </div>
+                  </li>
+                  <li class="nav-item">
+                    <a href="/#/development" class="nav-link"
+                      >Sustainable Development</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a href="/#/recruitment" class="nav-link">Recruitment</a>
+                  </li>
+                  <li class="nav-item">
+                    <a href="/#/contact_us" class="nav-link">Contact US</a>
+                  </li>
+                </ul>
+                <div class="lang_btn_container">
+                  <button type="button" class="lang_btn btn btn-secondary">
+                    Language<i class="fa-solid fa-globe"></i>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </nav>
+        </header>
+        <div class="vision_content">
+          <div>
+            <div class="home_container">
+              <section class="landing">
+                <div class="overlay"></div>
+                <p class="slide-in active">
+                  The leading Saudi company in providing the latest ophthalmic
+                  healthcare services, consumables and medical devices
+                </p>
+                <div class="arrow_down slide-in active">
+                  <i
+                    class="fas fa-angle-double-down fa-2x"
+                    aria-hidden="true"
+                  ></i>
+                </div>
+              </section>
+              <section class="company_brief" id="company_brief">
+                <img
+                  src="/static/media/vision_care.166f44f5005683c04815.png"
+                  alt="Vision Care"
+                  class="img-fluid"
+                />
+              </section>
+            </div>
+          </div>
+        </div>
+        <footer>
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+                <h4>Talent Vision Care</h4>
+                <p>
+                  We are Saudi Healthcare Company, specializing in Ophthalmic
+                  Medical Devices and Consumables, as well as cosmeceuticals and
+                  nutraceutical products. With locations in Riyadh, Dammam, and
+                  Jeddah, we have established ourselves as a reputable company
+                  covering all territories in the Kingdom of Saudi Arabia.
+                </p>
+                <p>
+                  Our goal is to expand our reach and cover the MENA region
+                  (Middle East and North Africa) by the end of 2028. Our team
+                  consists of experienced professionals with over 50 years of
+                  cumulative experience in the pharmaceutical industry and
+                  medical devices. We value our team members as the most
+                  valuable resources in our organization.
+                </p>
+              </div>
+              <div class="social_links col-md-4">
+                <h4>Social Links</h4>
+                <a href="/"><i class="fa-brands fa-facebook-f"></i></a
+                ><a href="/"><i class="fa-brands fa-instagram"></i></a
+                ><a href="/"><i class="fa-brands fa-x-twitter"></i></a
+                ><a
+                  href="https://www.linkedin.com/in/talent-vision-care-34888829a/"
+                  ><i class="fa-brands fa-linkedin"></i></a
+                ><a href="/"><i class="fa-brands fa-youtube"></i></a>
+                <div class="contact_info">
+                  <p>
+                    <i class="fa fa-map-marker-alt" aria-hidden="true"></i>Saudi
+                    Arabia, Riyadh
+                  </p>
+                  <p>
+                    <i class="fa fa-paper-plane" aria-hidden="true"></i>zip code
+                    : 1 3 7 8 7
+                  </p>
+                  <p>
+                    <i class="fa fa-inbox" aria-hidden="true"></i>p.o box : 5 0
+                    6 7
+                  </p>
+                  <a href="tel:+966 11 207 9919"
+                    ><i class="fa fa-phone" aria-hidden="true"></i>+966 11 207
+                    9919</a
+                  ><a href="mailto:info@visioncareksa.com"
+                    ><i class="fa fa-envelope" aria-hidden="true"></i
+                    >info@visioncareksa.com</a
+                  >
+                </div>
+                <div>
+                  <img
+                    class="logo"
+                    src="/static/media/vision_care.166f44f5005683c04815.png"
+                    alt="TALENT VISION CARE"
+                  />
+                </div>
+              </div>
+              <div class="routes col-md-4">
+                <h4>Quick Links</h4>
+                <a href="/#/home">Home</a><a href="/#/about">About</a
+                ><a href="/#/consumables">Consumables</a
+                ><a href="/#/devices">Devices</a
+                ><a href="/#/development">Sustainable Development</a
+                ><a href="/#/recruitment">Recruitment</a
+                ><a href="/#/contact_us">ContactUs</a>
+              </div>
+              <div class="col-md-12">
+                <p class="copy_right">
+                  All rights reserved - TALENT VISION CARE © 2023
+                </p>
+              </div>
+            </div>
+          </div>
+        </footer>
+      </div>
+    </div>
+  </body>
+</html>
