hide index.html content

--- a/index.html
+++ b/index.html
@@ -27,183 +27,185 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
       <div class="App">
-        <header>
-          <nav class="navbar navbar-expand-lg fixed-top">
-            <div class="container-fluid">
-              <a href="/" class="navbar-brand"
-                ><img
-                  class="logo"
-                  src="/static/media/vision_care.166f44f5005683c04815.png"
-                  alt="TALENT VISION CARE" /></a
-              ><button
-                aria-label="Toggle navigation"
-                type="button"
-                class="navbar-toggler"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse">
-                <ul class="m-auto navbar-nav">
-                  <li class="nav-item">
-                    <a href="/#/home" class="nav-link">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="/#/about" class="nav-link">About</a>
-                  </li>
-                  <li class="dropdown nav-item">
-                    <a
-                      aria-haspopup="true"
-                      href="#"
-                      class="dropdown-toggle nav-link"
-                      aria-expanded="false"
-                      >Work Scope</a
-                    >
-                    <div
-                      tabindex="-1"
-                      role="menu"
-                      aria-hidden="true"
-                      class="dropdown-menu dropdown-menu-end"
-                    >
-                      <button
-                        tabindex="0"
-                        role="menuitem"
-                        class="dropdown-item"
-                      >
-                        <a href="/#/consumables" class="nav-link"
-                          >Consumables</a
-                        ></button
-                      ><button
-                        tabindex="0"
-                        role="menuitem"
-                        class="dropdown-item"
-                      >
-                        <a href="/#/devices" class="nav-link">Devices</a>
-                      </button>
-                    </div>
-                  </li>
-                  <li class="nav-item">
-                    <a href="/#/development" class="nav-link"
-                      >Sustainable Development</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a href="/#/recruitment" class="nav-link">Recruitment</a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="/#/contact_us" class="nav-link">Contact US</a>
-                  </li>
-                </ul>
-                <div class="lang_btn_container">
-                  <button type="button" class="lang_btn btn btn-secondary">
-                    Language<i class="fa-solid fa-globe"></i>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </nav>
-        </header>
-        <div class="vision_content">
-          <div>
-            <div class="home_container">
-              <section class="landing">
-                <div class="overlay"></div>
-                <p class="slide-in active">
-                  The leading Saudi company in providing the latest ophthalmic
-                  healthcare services, consumables and medical devices
-                </p>
-                <div class="arrow_down slide-in active">
-                  <i
-                    class="fas fa-angle-double-down fa-2x"
-                    aria-hidden="true"
-                  ></i>
-                </div>
-              </section>
-              <section class="company_brief" id="company_brief">
-                <img
-                  src="/static/media/vision_care.166f44f5005683c04815.png"
-                  alt="Vision Care"
-                  class="img-fluid"
-                />
-              </section>
-            </div>
-          </div>
-        </div>
-        <footer>
-          <div class="container">
-            <div class="row">
-              <div class="col-md-4">
-                <h4>Talent Vision Care</h4>
-                <p>
-                  We are Saudi Healthcare Company, specializing in Ophthalmic
-                  Medical Devices and Consumables, as well as cosmeceuticals and
-                  nutraceutical products. With locations in Riyadh, Dammam, and
-                  Jeddah, we have established ourselves as a reputable company
-                  covering all territories in the Kingdom of Saudi Arabia.
-                </p>
-                <p>
-                  Our goal is to expand our reach and cover the MENA region
-                  (Middle East and North Africa) by the end of 2028. Our team
-                  consists of experienced professionals with over 50 years of
-                  cumulative experience in the pharmaceutical industry and
-                  medical devices. We value our team members as the most
-                  valuable resources in our organization.
-                </p>
-              </div>
-              <div class="social_links col-md-4">
-                <h4>Social Links</h4>
-                <a href="/"><i class="fa-brands fa-facebook-f"></i></a
-                ><a href="/"><i class="fa-brands fa-instagram"></i></a
-                ><a href="/"><i class="fa-brands fa-x-twitter"></i></a
-                ><a
-                  href="https://www.linkedin.com/in/talent-vision-care-34888829a/"
-                  ><i class="fa-brands fa-linkedin"></i></a
-                ><a href="/"><i class="fa-brands fa-youtube"></i></a>
-                <div class="contact_info">
-                  <p>
-                    <i class="fa fa-map-marker-alt" aria-hidden="true"></i>Saudi
-                    Arabia, Riyadh
-                  </p>
-                  <p>
-                    <i class="fa fa-paper-plane" aria-hidden="true"></i>zip code
-                    : 1 3 7 8 7
-                  </p>
-                  <p>
-                    <i class="fa fa-inbox" aria-hidden="true"></i>p.o box : 5 0
-                    6 7
-                  </p>
-                  <a href="tel:+966 11 207 9919"
-                    ><i class="fa fa-phone" aria-hidden="true"></i>+966 11 207
-                    9919</a
-                  ><a href="mailto:info@visioncareksa.com"
-                    ><i class="fa fa-envelope" aria-hidden="true"></i
-                    >info@visioncareksa.com</a
-                  >
-                </div>
-                <div>
-                  <img
+        <div style="visibility: hidden;">
+            <header>
+            <nav class="navbar navbar-expand-lg fixed-top">
+                <div class="container-fluid">
+                <a href="/" class="navbar-brand"
+                    ><img
                     class="logo"
                     src="/static/media/vision_care.166f44f5005683c04815.png"
-                    alt="TALENT VISION CARE"
-                  />
+                    alt="TALENT VISION CARE" /></a
+                ><button
+                    aria-label="Toggle navigation"
+                    type="button"
+                    class="navbar-toggler"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse">
+                    <ul class="m-auto navbar-nav">
+                    <li class="nav-item">
+                        <a href="/#/home" class="nav-link">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/#/about" class="nav-link">About</a>
+                    </li>
+                    <li class="dropdown nav-item">
+                        <a
+                        aria-haspopup="true"
+                        href="#"
+                        class="dropdown-toggle nav-link"
+                        aria-expanded="false"
+                        >Work Scope</a
+                        >
+                        <div
+                        tabindex="-1"
+                        role="menu"
+                        aria-hidden="true"
+                        class="dropdown-menu dropdown-menu-end"
+                        >
+                        <button
+                            tabindex="0"
+                            role="menuitem"
+                            class="dropdown-item"
+                        >
+                            <a href="/#/consumables" class="nav-link"
+                            >Consumables</a
+                            ></button
+                        ><button
+                            tabindex="0"
+                            role="menuitem"
+                            class="dropdown-item"
+                        >
+                            <a href="/#/devices" class="nav-link">Devices</a>
+                        </button>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/#/development" class="nav-link"
+                        >Sustainable Development</a
+                        >
+                    </li>
+                    <li class="nav-item">
+                        <a href="/#/recruitment" class="nav-link">Recruitment</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="/#/contact_us" class="nav-link">Contact US</a>
+                    </li>
+                    </ul>
+                    <div class="lang_btn_container">
+                    <button type="button" class="lang_btn btn btn-secondary">
+                        Language<i class="fa-solid fa-globe"></i>
+                    </button>
+                    </div>
                 </div>
-              </div>
-              <div class="routes col-md-4">
-                <h4>Quick Links</h4>
-                <a href="/#/home">Home</a><a href="/#/about">About</a
-                ><a href="/#/consumables">Consumables</a
-                ><a href="/#/devices">Devices</a
-                ><a href="/#/development">Sustainable Development</a
-                ><a href="/#/recruitment">Recruitment</a
-                ><a href="/#/contact_us">ContactUs</a>
-              </div>
-              <div class="col-md-12">
-                <p class="copy_right">
-                  All rights reserved - TALENT VISION CARE © 2023
-                </p>
-              </div>
+                </div>
+            </nav>
+            </header>
+            <div class="vision_content">
+            <div>
+                <div class="home_container">
+                <section class="landing">
+                    <div class="overlay"></div>
+                    <p class="slide-in active">
+                    The leading Saudi company in providing the latest ophthalmic
+                    healthcare services, consumables and medical devices
+                    </p>
+                    <div class="arrow_down slide-in active">
+                    <i
+                        class="fas fa-angle-double-down fa-2x"
+                        aria-hidden="true"
+                    ></i>
+                    </div>
+                </section>
+                <section class="company_brief" id="company_brief">
+                    <img
+                    src="/static/media/vision_care.166f44f5005683c04815.png"
+                    alt="Vision Care"
+                    class="img-fluid"
+                    />
+                </section>
+                </div>
             </div>
-          </div>
-        </footer>
+            </div>
+            <footer>
+            <div class="container">
+                <div class="row">
+                <div class="col-md-4">
+                    <h4>Talent Vision Care</h4>
+                    <p>
+                    We are Saudi Healthcare Company, specializing in Ophthalmic
+                    Medical Devices and Consumables, as well as cosmeceuticals and
+                    nutraceutical products. With locations in Riyadh, Dammam, and
+                    Jeddah, we have established ourselves as a reputable company
+                    covering all territories in the Kingdom of Saudi Arabia.
+                    </p>
+                    <p>
+                    Our goal is to expand our reach and cover the MENA region
+                    (Middle East and North Africa) by the end of 2028. Our team
+                    consists of experienced professionals with over 50 years of
+                    cumulative experience in the pharmaceutical industry and
+                    medical devices. We value our team members as the most
+                    valuable resources in our organization.
+                    </p>
+                </div>
+                <div class="social_links col-md-4">
+                    <h4>Social Links</h4>
+                    <a href="/"><i class="fa-brands fa-facebook-f"></i></a
+                    ><a href="/"><i class="fa-brands fa-instagram"></i></a
+                    ><a href="/"><i class="fa-brands fa-x-twitter"></i></a
+                    ><a
+                    href="https://www.linkedin.com/in/talent-vision-care-34888829a/"
+                    ><i class="fa-brands fa-linkedin"></i></a
+                    ><a href="/"><i class="fa-brands fa-youtube"></i></a>
+                    <div class="contact_info">
+                    <p>
+                        <i class="fa fa-map-marker-alt" aria-hidden="true"></i>Saudi
+                        Arabia, Riyadh
+                    </p>
+                    <p>
+                        <i class="fa fa-paper-plane" aria-hidden="true"></i>zip code
+                        : 1 3 7 8 7
+                    </p>
+                    <p>
+                        <i class="fa fa-inbox" aria-hidden="true"></i>p.o box : 5 0
+                        6 7
+                    </p>
+                    <a href="tel:+966 11 207 9919"
+                        ><i class="fa fa-phone" aria-hidden="true"></i>+966 11 207
+                        9919</a
+                    ><a href="mailto:info@visioncareksa.com"
+                        ><i class="fa fa-envelope" aria-hidden="true"></i
+                        >info@visioncareksa.com</a
+                    >
+                    </div>
+                    <div>
+                    <img
+                        class="logo"
+                        src="/static/media/vision_care.166f44f5005683c04815.png"
+                        alt="TALENT VISION CARE"
+                    />
+                    </div>
+                </div>
+                <div class="routes col-md-4">
+                    <h4>Quick Links</h4>
+                    <a href="/#/home">Home</a><a href="/#/about">About</a
+                    ><a href="/#/consumables">Consumables</a
+                    ><a href="/#/devices">Devices</a
+                    ><a href="/#/development">Sustainable Development</a
+                    ><a href="/#/recruitment">Recruitment</a
+                    ><a href="/#/contact_us">ContactUs</a>
+                </div>
+                <div class="col-md-12">
+                    <p class="copy_right">
+                    All rights reserved - TALENT VISION CARE © 2023
+                    </p>
+                </div>
+                </div>
+            </div>
+            </footer>
+        </div>
       </div>
     </div>
   </body>
